--- a/momentum/index.css
+++ b/momentum/index.css
@@ -3,6 +3,15 @@ body {
     color: rgb(41, 57, 79);
 }
 
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 input {
     width: 12rem;
     height: 1.5rem;
@@ -25,4 +34,14 @@ input {
 
 .greetings {
     font-size: 2rem;
+}
+
+.bgImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 0.5s linear;
 }
