--- a/momentum/index.css
+++ b/momentum/index.css
@@ -1,6 +1,17 @@
 body {
     background-color: rgb(208, 208, 208);
     color: rgb(41, 57, 79);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 @keyframes fadeIn {
@@ -13,15 +24,58 @@ body {
 }
 
 input {
-    width: 12rem;
-    height: 1.5rem;
-    border-radius: 0.5rem;
+    width: 25rem;
+    height: 3rem;
+    line-height: 3rem;
     padding-left: 0.5rem;
+    padding: 0.2rem;
+    font-size: 200%;
+    text-align: center;
+    color: white;
     outline: none;
+    border: 0;
+    background-color: transparent;
+    border-bottom: 0.2rem solid #fff;
+}
+input::placeholder {
+    color: white;
+}
+
+.search-container {
+    font-size: 120%;
+    color: white;
+    flex-direction: row;
+    cursor: pointer;
+}
+
+.search-container input {
+    width: 18rem;
+    height: 2rem;
+    font-size: 120%;
+    text-align: start;
+    border-bottom: transparent;
+    cursor: pointer;
+}
+
+.search-container input:hover {
+    border-bottom: 0.2rem solid #fff;
+}
+
+.search-container span {
+    margin-top: 2rem;
+    margin-left: 1rem;
+}
+.search-container svg {
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
 }
 
 .clock {
-    font-size: 4rem;
+    font-size: 1050%;
+    font-weight: 500;
+    color: white;
+    margin-bottom: 0.5rem;
+    margin-top: 0;
 }
 
 .hide {
@@ -33,10 +87,14 @@ input {
 }
 
 .greetings {
-    font-size: 2rem;
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
+    font-size: 337.5%;
+    font-weight: 500;
+    color: white;
 }
 
-.bgImage {
+.js-bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -44,4 +102,7 @@ input {
     height: 100%;
     z-index: -1;
     animation: fadeIn 0.5s linear;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
